<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contacts"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:gravity="center">

        <Button
            android:id="@+id/fetch_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onFetchContactsClick"
            android:text="@string/fetch_contacts_button" />

        <Button
            android:id="@+id/fetch_accounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addContactClick"
            android:text="@string/addContact" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClearClick"
            android:text="@string/clear_button" />
    </LinearLayout>

    <ListView
        android:id="@+id/contacts_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>