<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:onClick="addBackClick"
        android:text="@string/back" />

    <Button
        android:id="@+id/button2"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left|bottom"
        android:layout_row="3"
        android:onClick="addAddContactClick"
        android:text="@string/addData" />

    <EditText
        android:id="@+id/phoneTextField"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:layout_row="3"
        android:ems="10"
        android:text="@string/phoneNumber" />

    <Space
        android:layout_width="46dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:layout_column="0"
        android:layout_row="0" />

    <Space
        android:layout_width="24dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="0" />

    <Space
        android:layout_width="173dp"
        android:layout_height="1dp"
        android:layout_column="2"
        android:layout_row="0" />

    <EditText
        android:id="@+id/nameTextField"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left"
        android:layout_row="2"
        android:ems="10"
        android:text="@string/Name" >

        <requestFocus />
    </EditText>

    <Space
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_row="1" />

    <Space
        android:layout_width="1dp"
        android:layout_height="70dp"
        android:layout_column="0"
        android:layout_row="2" />

    <Space
        android:layout_width="1dp"
        android:layout_height="126dp"
        android:layout_column="0"
        android:layout_row="3" />

    <Space
        android:layout_width="100dp"
        android:layout_height="235dp"
        android:layout_column="1"
        android:layout_row="4" />

    <Space
        android:layout_width="100dp"
        android:layout_height="663dp"
        android:layout_row="4" />

</GridLayout>